source/uniandes/lym/robot/control/Robot.java
/* Generated By:JavaCC: Do not edit this line. Robot.java */
package uniandes.lym.robot.control;

import uniandes.lym.robot.kernel.*;
import java.awt.Point;
import java.io.*;
import java.util.Vector;
import java.util.LinkedList;
import java.util.HashMap;

@SuppressWarnings("serial")
public class Robot implements RobotConstants {


        private RobotWorldDec world;
        HashMap<String,Integer> variables = new HashMap<String,Integer>();


        void setWorld(RobotWorld w) {
                world = (RobotWorldDec) w;
        }

  final public boolean command(StringBuffer sistema) throws ParseException {
                int x= 0;
                String salida=new String();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ROBOT:
      jj_consume_token(ROBOT);
      jj_consume_token(VARS);
      jj_consume_token(WORD);
      comands(salida, x);
                    try {
                                        Thread.sleep(2000);
                                    } catch (InterruptedException e) {
                                        System.err.format("IOException: %s%n", e);
                                    }

                        sistema.append(salida);
                        {if (true) return true;}
      break;
    case 0:
      jj_consume_token(0);
                         {if (true) return false;}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public void objetoPoner() throws ParseException {
                int f=1;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case T_CHIPS:
      jj_consume_token(T_CHIPS);
      jj_consume_token(22);
      f = numero();
                                               world.putChips(f);
      break;
    case T_BALLOONS:
      jj_consume_token(T_BALLOONS);
      jj_consume_token(22);
      f = numero();
                                                           world.putBalloons(f);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void objetoRecoger() throws ParseException {
                int f=1;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case T_CHIPS:
      jj_consume_token(T_CHIPS);
      jj_consume_token(22);
      f = numero();
                                              world.pickChips(f);
      break;
    case T_BALLOONS:
      jj_consume_token(T_BALLOONS);
      jj_consume_token(22);
      f = numero();
                                                           world.grabBalloons(f);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

        /**
	 *  reconoce un numero entero sin signo
	 * @return el valor entero correspondiente al valor reconocido
	 */
  final public int numero() throws ParseException, Error {
                int total=1;
    jj_consume_token(NUMERO);
                        try
                        {
                                total = Integer.parseInt(token.image);
                        }
                        catch (NumberFormatException ee)
                        {
                                // Dada la forma de NUMERO, sabemos que solo puede tener digitos
                                // Por lo tanto, lo unico que podria pasar es que el numero sea muy grande
                                {if (true) throw new Error("Numero demasiado grande: "+token.image+"!!");}
                        }
                        {if (true) return total;}
    throw new Error("Missing return statement in function");
  }

  final public String letter() throws ParseException {
         String s = "";
    jj_consume_token(MI);
          s = token.image;
          {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  final public String num() throws ParseException {
         String s = "";
    jj_consume_token(NUMERO);
          s = token.image;
          {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  final public String word() throws ParseException {
         String w = "";
    jj_consume_token(WORD);
      w = token.image;
      {if (true) return w;}
    throw new Error("Missing return statement in function");
  }

  final public void turn(String s) throws ParseException {
  if (s.equalsIgnoreCase("right")) {
   world.turnRight();

   }
   else if (s.equalsIgnoreCase("left")) {
     world.turnRight();
     world.turnRight();
     world.turnRight();
   }
  }

  final public void face(String s) throws ParseException {
     boolean b = false;
  if (s.equalsIgnoreCase("north")) {
    while(b == false) {
      if (world.facingNorth()) {

        b = true;

        }
     else {
          world.turnRight();
        }
     }

}
   else if (s.equalsIgnoreCase("south")) {
    while(b == false) {
      if (world.facingSouth()) {

        b = true;

        }
   else {
          world.turnRight();
        }
     }

}

else if (s.equalsIgnoreCase("east")) {
    while(b == false) {
      if (world.facingEast()) {

        b = true;

        }
   else {
          world.turnRight();
        }
     }

}

else if (s.equalsIgnoreCase("west")) {
    while(b ==false) {
      if (world.facingWest()) {

        b = true;

        }
   else {
          world.turnRight();
        }
     }

   }
  }

  final public void assign(String a ,int x) throws ParseException {
   variables.put(a,x);
  }

  final public void move(String a) throws ParseException {
 int x = 1;
  if(variables.containsKey(a)) {
   x = variables.get(a);
 }
world.moveForward(x);
  }

  final public void moveDir(int z, String dir) throws ParseException {
  String back = "";
    if(world.facingNorth()) {
      back = "North";
    }
    else if(world.facingSouth()) {
      back = "South";
    }
    else if(world.facingWest()) {
      back = "West)";
    }
    else if(world.facingEast()) {
      back = "East";
    }

        if(dir.equalsIgnoreCase("right")){
                if(world.facingEast()){
                world.moveHorizontally(z);
                }
                else {
                        int n= 0;
                        while(world.facingEast()== false){
                                world.turnRight();
                                n++;
                        }
                        world.moveHorizontally(z);
                        turn(back);
                }
        }
        else if(dir.equalsIgnoreCase("left")){
                if(world.facingWest()){
                        world.moveHorizontally(z);
                        }
                        else {
                                int n= 0;
                                while(world.facingWest() == false){
                                        world.turnRight();
                                        n++;
                                }
                                world.moveHorizontally(z);
                                turn(back);
                        }
        }
        else if(dir.equalsIgnoreCase("front")){
                if(world.facingEast() || world.facingWest()){
                        world.moveHorizontally(z);
                }
                else {
                        world.moveVertically(z);
                }
        }
        else {
                if(world.facingEast()){
                        int n= 0;
                        while(world.facingWest() == false){
                                world.turnRight();
                                n++;
                        }
                        world.moveHorizontally(z);
                        turn(back);
                }
                else if(world.facingWest()){
                        int n= 0;
                        while(world.facingEast()== false){
                                world.turnRight();
                                n++;
                        }
                        world.moveHorizontally(z);
                        turn(back);
                }
                else if (world.facingNorth()){
                        int n= 0;
                                while(world.facingSouth() == false){
                                        world.turnRight();
                                        n++;
                                }
                                world.moveVertically(z);;
                                turn(back);
                }
                else {
                        int n= 0;
                        while(world.facingNorth()== false){
                                world.turnRight();
                                n++;
                        }
                        world.moveVertically(z);;
                        turn(back);
                }
        }
  }

  final public void comands(String salida, int x) throws ParseException {
     String a;
     int b;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case T_MOVER:
      case T_TURNRIGHT:
      case T_PONER:
      case T_RECOGER:
      case ASSIGN:
      case TURN:
      case FACE:
      case MOVE_DIR:
      case MOVE_IN_DIR:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case T_TURNRIGHT:
        jj_consume_token(T_TURNRIGHT);
        jj_consume_token(23);
        jj_consume_token(24);
                                      world.turnRight();salida = "Comando GIRAR DER";
        break;
      case T_MOVER:
        jj_consume_token(T_MOVER);
        jj_consume_token(23);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MI:
          a = letter();
          break;
        case NUMERO:
          a = num();
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(24);
                                                                  move(a); salida = "Comando MOVER ADELANTE";
        break;
      case T_PONER:
        jj_consume_token(T_PONER);
        jj_consume_token(23);
        objetoPoner();
        jj_consume_token(24);
                                                        salida = "Comando:  PONER";
        break;
      case T_RECOGER:
        jj_consume_token(T_RECOGER);
        jj_consume_token(23);
        objetoRecoger();
        jj_consume_token(24);
                                                                 salida = "Comando:  Recoger";
        break;
      case ASSIGN:
        jj_consume_token(ASSIGN);
        jj_consume_token(23);
        a = letter();
        jj_consume_token(25);
        x = numero();
        jj_consume_token(24);
                                                                    assign(a,x);
        break;
      case TURN:
        jj_consume_token(TURN);
        jj_consume_token(23);
        a = word();
        jj_consume_token(24);
                                               turn(a);
        break;
      case FACE:
        jj_consume_token(FACE);
        jj_consume_token(23);
        a = word();
        jj_consume_token(24);
                                               face(a);
        break;
      case MOVE_DIR:
        jj_consume_token(MOVE_DIR);
        jj_consume_token(23);
        x = numero();
        jj_consume_token(25);
        a = word();
        jj_consume_token(24);
                                                                    moveDir(x,a);
        break;
      case MOVE_IN_DIR:
        jj_consume_token(MOVE_IN_DIR);
        jj_consume_token(23);
        a = letter();
        jj_consume_token(25);
        x = numero();
        jj_consume_token(24);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  /** Generated Token Manager. */
  public RobotTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[6];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x401,0xc0000,0xc0000,0x1f3c0,0x100020,0x1f3c0,};
   }

  /** Constructor with InputStream. */
  public Robot(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Robot(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new RobotTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Robot(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new RobotTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Robot(RobotTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(RobotTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[26];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 6; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 26; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
